@@ -20,6 +20,7 @@ import com.google.common.collect.ListMultimap;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.List;
 
 @Beta
 public interface Response
@@ -28,9 +29,18 @@ public interface Response
 
     String getStatusMessage();
 
-    String getHeader(String name);
+    default String getHeader(String name)
+    {
+        List<String> values = getHeaders(name);
+        return values.isEmpty() ? null : values.get(0);
+    }
 
-    ListMultimap<String, String> getHeaders();
+    default List<String> getHeaders(String name)
+    {
+        return getHeaders().get(HeaderName.of(name));
+    }
+
+    ListMultimap<HeaderName, String> getHeaders();
 
     long getBytesRead();
 
