@@ -29,7 +29,7 @@ public class UnexpectedResponseException extends RuntimeException
     private final Request request;
     private final int statusCode;
     private final String statusMessage;
-    private final ListMultimap<String, String> headers;
+    private final ListMultimap<HeaderName, String> headers;
 
     public UnexpectedResponseException(Request request, Response response)
     {
@@ -49,7 +49,7 @@ public class UnexpectedResponseException extends RuntimeException
                 ImmutableListMultimap.copyOf(response.getHeaders()));
     }
 
-    public UnexpectedResponseException(String message, Request request, int statusCode, String statusMessage, ListMultimap<String, String> headers)
+    public UnexpectedResponseException(String message, Request request, int statusCode, String statusMessage, ListMultimap<HeaderName, String> headers)
     {
         super(message);
         this.request = request;
@@ -70,14 +70,16 @@ public class UnexpectedResponseException extends RuntimeException
 
     public String getHeader(String name)
     {
-        List<String> values = getHeaders().get(name);
-        if (values.isEmpty()) {
-            return null;
-        }
-        return values.get(0);
+        List<String> values = getHeaders().get(HeaderName.of(name));
+        return values.isEmpty() ? null : values.get(0);
     }
 
-    public ListMultimap<String, String> getHeaders()
+    public List<String> getHeaders(String name)
+    {
+        return headers.get(HeaderName.of(name));
+    }
+
+    public ListMultimap<HeaderName, String> getHeaders()
     {
         return headers;
     }
