@@ -6,13 +6,14 @@ import com.google.common.collect.ListMultimap;
 import com.google.common.io.CountingInputStream;
 import com.google.common.net.HttpHeaders;
 import com.google.common.net.MediaType;
+import io.airlift.http.client.HeaderName;
 import io.airlift.http.client.HttpStatus;
 import io.airlift.http.client.Response;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.List;
+import java.util.Map;
 
 import static com.google.common.base.MoreObjects.toStringHelper;
 import static com.google.common.base.Preconditions.checkNotNull;
@@ -21,7 +22,7 @@ public class TestingResponse
         implements Response
 {
     private final HttpStatus status;
-    private final ListMultimap<String, String> headers;
+    private final ListMultimap<HeaderName, String> headers;
     private final CountingInputStream countingInputStream;
 
     public TestingResponse(HttpStatus status, ListMultimap<String, String> headers, byte[] bytes)
@@ -32,7 +33,7 @@ public class TestingResponse
     public TestingResponse(HttpStatus status, ListMultimap<String, String> headers, InputStream input)
     {
         this.status = checkNotNull(status, "status is null");
-        this.headers = ImmutableListMultimap.copyOf(checkNotNull(headers, "headers is null"));
+        this.headers = ImmutableListMultimap.copyOf(toHeaderMap(checkNotNull(headers, "headers is null")));
         this.countingInputStream = new CountingInputStream(checkNotNull(input, "input is null"));
     }
 
@@ -49,14 +50,7 @@ public class TestingResponse
     }
 
     @Override
-    public String getHeader(String name)
-    {
-        List<String> list = getHeaders().get(name);
-        return list.isEmpty() ? null : list.get(0);
-    }
-
-    @Override
-    public ListMultimap<String, String> getHeaders()
+    public ListMultimap<HeaderName, String> getHeaders()
     {
         return headers;
     }
@@ -84,7 +78,6 @@ public class TestingResponse
                 .toString();
     }
 
-
     public static ListMultimap<String, String> contentType(MediaType type)
     {
         return ImmutableListMultimap.of(HttpHeaders.CONTENT_TYPE, type.toString());
@@ -93,5 +86,14 @@ public class TestingResponse
     public static Response mockResponse(HttpStatus status, MediaType type, String content)
     {
         return new TestingResponse(status, contentType(type), content.getBytes(Charsets.UTF_8));
+    }
+
+    private static ListMultimap<HeaderName, String> toHeaderMap(ListMultimap<String, String> headers)
+    {
+        ImmutableListMultimap.Builder<HeaderName, String> builder = ImmutableListMultimap.builder();
+        for (Map.Entry<String, String> entry : headers.entries()) {
+            builder.put(HeaderName.of(entry.getKey()), entry.getValue());
+        }
+        return builder.build();
     }
 }
